# antOgre

./: CMakeLists.txt  README.md  buildDependenciesVS2013.bat
cmake/: antMacros.cmake
cmake/Modules/: FindBullet.cmake  FindDirectX.cmake  FindFastDelegate.cmake  FindLua.cmake  FindOGG.cmake  FindTinyXML.cmake  FindZLIB.cmake
configuration/: setup_env.bat.in  setup_vs.bat.in
data/: plugins.cfg.in  resources.cfg.in
data/World/: physics_test.xml
data/actors/: athene.xml  basicLightActor.xml  basicSphere.xml  groundBox.xml  groundBox2.xml  groundPlane.xml  ogreHead.xml  ogreHeadPlayer.xml  skyplane.xml
data/lua/: ActorManager.lua  Events.lua  LevelInit.lua  LevelPostInit.lua  MatrixMath.lua  PreInit.lua  testScript.lua
dependencies/: CMakeLists.txt  setup_vs.bat
dependencies/luaplusplus/: CMakeLists.txt  LuaPlus.cpp  LuaState_DumpObject.cpp
dependencies/tinyxml/: CMakeLists.txt
examples/: CMakeLists.txt
examples/ogreApp/: CMakeLists.txt
examples/ogreApp/src/: OgreApp.cpp  OgreApp.hpp  TestController.cpp  TestController.hpp  TestEvents.cpp  TestEvents.hpp  TestGameLogic.cpp  TestGameLogic.hpp  TestGameView.cpp  TestGameView.hpp  main.cpp
examples/ogreTestApp/: CMakeLists.txt
examples/ogreTestApp/src/: BaseApplication.cpp  BaseApplication.h  TutorialApplication.cpp  TutorialApplication.h
include/: ant_config.hpp.in
include/actors/: Actor.hpp  ActorComponent.hpp  ActorFactory.hpp  TransformComponent.hpp
include/ant/: BaseGameLogic.hpp  Controllers.hpp  CriticalSection.h  EventManager.hpp  Events.hpp  GenericObjectFactory.hpp  IEventManager.hpp  IGameLogic.hpp  IGameView.hpp  IProcess.hpp  IResourceFile.hpp  IResourceLoader.hpp  ISerializable.hpp  ISingleton.hpp  InputManager.hpp  Logger.hpp  ProcessManager.hpp  ProcessManagerSingleton.hpp  Resource.hpp  ResourceCache.hpp  ResourceCacheManager.hpp  ResourceFiles.hpp  ResourceHandle.hpp  ResourceLoaders.hpp  String.hpp  TextureResource.hpp  XmlResource.hpp  ZipFile.hpp  ant_std.hpp  core_types.hpp  debug.hpp  templates.hpp
include/antLua/: BaseScriptComponent.hpp  IScriptComponent.hpp  IScriptManager.hpp  LuaScriptExports.hpp  LuaStateManager.hpp  ScriptEvent.hpp  ScriptEventListener.hpp  ScriptProcess.hpp
include/antOgre/: BaseRenderComponent.hpp  IOGRERenderComponent.hpp  IOgreApp.hpp  OGREHumanView.hpp  OgreScene.hpp  RenderManager.hpp  Utils.hpp
src/: CMakeLists.txt
src/actors/: Actor.cpp  ActorComponent.cpp  ActorFactory.cpp  TransformComponent.cpp
src/ant/: BaseGameLogic.cpp  CMakeLists.txt  EventManager.cpp  Events.cpp  IEventManager.cpp  IProcess.cpp  InputManager.cpp  Logger.cpp  ProcessManager.cpp  ProcessManagerSingleton.cpp  Resource.cpp  ResourceCache.cpp  ResourceCacheManager.cpp  ResourceFiles.cpp  ResourceHandle.cpp  ResourceLoaders.cpp  String.cpp  TextureResource .cpp  XmlResource.cpp  ZipFile.cpp  ant_std.cpp
src/antLua/: BaseScriptComponent.cpp  CMakeLists.txt  LuaScriptExports.cpp  LuaStateManager.cpp  ScriptEvent.cpp  ScriptEventListener.cpp  ScriptProcess.cpp
src/antOgre/: BaseRenderComponent.cpp  CMakeLists.txt  IOgreApp.cpp  OGREHumanView.cpp  OgreScene.cpp  RenderManager.cpp  Utils.cpp
unittest/: CMakeLists.txt  unittest_Process.cpp  unittests.hpp
unittests/: CMakeLists.txt  unittest_Actor.cpp  unittest_BasicGameLogic.cpp  unittest_EventManager.cpp  unittest_Process.cpp  unittest_Resource.cpp  unittest_ResourceCache.cpp  unittest_ScriptLua.cpp  unittests.hpp
