project(${LUAPLUSPLUS_TARGET_NAME})

include_directories(${PROJECT_SOURCE_DIR})

FILE( GLOB_RECURSE 
	INCLUDES
    ${PROJECT_SOURCE_DIR}/*.h    
)

FILE( GLOB_RECURSE
	SOURCES
	${PROJECT_SOURCE_DIR}/*.cpp
	${PROJECT_SOURCE_DIR}/*.c
) 

add_library(${LUAPLUSPLUS_TARGET_NAME} ${SOURCES} ${INCLUDES} )

if(MSVC)
    set(CMAKE_DEBUG_POSTFIX "d")
    add_definitions(-D_CRT_SECURE_NO_DEPRECATE)
    add_definitions(-D_CRT_NONSTDC_NO_DEPRECATE)
endif()

# Set properties for antCore
SET_TARGET_PROPERTIES(${LUAPLUSPLUS_TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)

SET_PROPERTY(TARGET ${LUAPLUSPLUS_TARGET_NAME} PROPERTY FOLDER "external")


#SET_TARGET_PROPERTIES (${LUAPLUSPLUS_TARGET_NAME} PROPERTIES DEFINE_SYMBOL  "EXPORT" )