# core library additional include files
FILE( GLOB_RECURSE 
	INCLUDES
    ${ANT_INCLUDE_DIR}/antLua/*.hpp
)

FILE( GLOB_RECURSE
	SOURCES
	${ANT_SOURCE_DIR}/antLua/*.cpp
) 

# add ANT library
add_library(${ANTLUA_TARGET_NAME} ${INCLUDES} ${SOURCES} ${ANT_INCLUDE_DIR}/ant_config.hpp)

target_link_libraries(${ANTLUA_TARGET_NAME} ${TINYXML_TARGET_NAME} ${LUAPLUSPLUS_TARGET_NAME} ${ANTCORE_TARGET_NAME} ${OGRE_LIBS}) 

# Set properties for antCore
SET_TARGET_PROPERTIES(${ANTLUA_TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_PROPERTY(TARGET ${ANTLUA_TARGET_NAME} PROPERTY FOLDER "antLua")

