# core library additional include files
FILE( GLOB_RECURSE 
	INCLUDES
    ${ANT_INCLUDE_DIR}/antOgre/*.hpp
)

FILE( GLOB_RECURSE
	SOURCES
	${ANT_SOURCE_DIR}/antOgre/*.cpp
) 

# add ANT library
add_library(${ANTOGRE_TARGET_NAME} ${INCLUDES} ${SOURCES} ${ANT_INCLUDE_DIR}/ant_config.hpp)

target_link_libraries(${ANTOGRE_TARGET_NAME} ${TINYXML_TARGET_NAME} ${LUAPLUSPLUS_TARGET_NAME} ${ANTCORE_TARGET_NAME} ${ANTLUA_TARGET_NAME} ${OGRE_LIBS}) 

# Set properties for antCore
SET_TARGET_PROPERTIES(${ANTOGRE_TARGET_NAME} PROPERTIES LINKER_LANGUAGE CXX)
SET_PROPERTY(TARGET ${ANTOGRE_TARGET_NAME} PROPERTY FOLDER "antOgre")